<resources>
    <string name="app_name">projectAndroid</string>
    <string name="title_activity_interventions">interventions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Entreprise</string>
    <string name="nav_header_subtitle">Expert Maintenance</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="interventions">interventions</string>
    <string name="interventions_assigner">interventions à assigner</string>
    <string name="messages">Messages</string>
    <string name="client">Client</string>
    <string name="adresses">Adresses</string>
    <string name="parametres">Paramétres</string>
    <string name="a_propos">A propos</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="title_activity_detail_intervention">DetailIntervention</string>
    <string name="tab_text_1">Détail</string>
    <string name="tab_text_2">Fichier</string>
    <string name="tab_text_3">Signature</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="col1">Terminé</string>
    <string name="Col2">Date</string>
    <string name="Col3">Commentaire</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="intervention_n_12">Intervention n 12</string>
    <string name="_18_08_2020">18-08-2020</string>
    <string name="contact">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">tabbed</string>
</resources>